// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circle variant Render size large 1`] = `
.c0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="64"
    variant="circle"
    width="64"
  />
</div>
`;

exports[`circle variant Render size medium 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="circle"
    width="40"
  />
</div>
`;

exports[`circle variant Render size small 1`] = `
.c0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="32"
    variant="circle"
    width="32"
  />
</div>
`;

exports[`circle variant Render size tiny 1`] = `
.c0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="24"
    variant="circle"
    width="24"
  />
</div>
`;

exports[`circle variant Render size undefined 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 50%;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="circle"
    width="40"
  />
</div>
`;

exports[`square variant Render size large 1`] = `
.c0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="64"
    variant="square"
    width="64"
  />
</div>
`;

exports[`square variant Render size medium 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="square"
    width="40"
  />
</div>
`;

exports[`square variant Render size small 1`] = `
.c0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="32"
    variant="square"
    width="32"
  />
</div>
`;

exports[`square variant Render size tiny 1`] = `
.c0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="24"
    variant="square"
    width="24"
  />
</div>
`;

exports[`square variant Render size undefined 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="square"
    width="40"
  />
</div>
`;

exports[`undefined variant Render size large 1`] = `
.c0 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="64"
    variant="square"
    width="64"
  />
</div>
`;

exports[`undefined variant Render size medium 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="square"
    width="40"
  />
</div>
`;

exports[`undefined variant Render size small 1`] = `
.c0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="32"
    variant="square"
    width="32"
  />
</div>
`;

exports[`undefined variant Render size tiny 1`] = `
.c0 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="24"
    variant="square"
    width="24"
  />
</div>
`;

exports[`undefined variant Render size undefined 1`] = `
.c0 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 6px;
}

<div>
  <img
    class="c0 c1"
    css=","
    data-testid="pbl-avatar"
    height="40"
    variant="square"
    width="40"
  />
</div>
`;
